fix pdf not showing on mobiles and restrict download pdf to only allow admins to download pdf

--- a/src/components/contract-pdf/contract-pdf.module.scss
+++ b/src/components/contract-pdf/contract-pdf.module.scss
@@ -17,27 +17,45 @@
 a {
   text-decoration: none;
 }
-.downloadBtn {
-  cursor: pointer;
-  background: royalblue;
-  border: none;
-  padding: 15px 20px;
-  border-radius: 5px;
+
+.pdfControls {
   display: flex;
   gap: 10px;
+  justify-content: space-between;
+  padding: 20px;
   align-items: center;
-  img {
-    height: 1.2rem;
-    width: fit-content;
-  }
-  p {
-    color: #fff;
-    text-decoration: none;
+  .navBtn {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: transparent;
+    border: 2px solid gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    filter: brightness(1.5);
+    img {
+      height: 20px;
+      width: fit-content;
+    }
+    &:hover {
+      filter: brightness(1);
+    }
+    &.prev {
+      transform: rotate(180deg);
+    }
   }
 }
 
 @keyframes spin {
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (min-width: 768px) {
+  .pdfControls {
+    gap: 50px;
+    justify-content: center;
   }
 }
